pwa edit images to public folder frontend

--- a/manifest.json
+++ b/manifest.json
@@ -3,25 +3,25 @@
   "short_name": "Money-Memo",
   "icons": [
     {
-      "src": "/src/assets/img1.jpg",
+      "src": "/img1.jpg",
       "type": "image/jpg",
       "sizes": "144x144"
     },
     {
-      "src": "/src/assets/img2.png",
+      "src": "/img2.png",
       "type": "image/png",
       "sizes": "192x192"
     }
   ],
   "screenshots": [
     {
-      "src": "/src/assets/img3.png",
+      "src": "/img3.png",
       "type": "image/png",
       "sizes": "320x320",
       "form_factor": "wide"
     },
     {
-      "src": "/src/assets/img3.png",
+      "src": "/img3.png",
       "type": "image/png",
       "sizes": "320x320",
       "form_factor": "narrow"
